--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       ALGORITHM: HS256
       ADMIN_EMAIL: "admin@utschool.sch.id"
       ADMIN_PASSWORD: "admin-ini"
-      MONGO_URL: mongodb://mongodb:27017/
+      MONGO_URL: mongodb://localhost:27017/
       MAIN_DB: nfc_db
     networks:
       - nfc-network
