--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,17 @@ services:
     container_name: "api_manage_nfc_ut"
     ports:
       - 3004:4545
+    environment:
+      APP_HOST: localhost
+      APP_PORT: 4545
+      APP_FULL_URL: https://localhost:4545/api/
+      APP_API_KEY: f8097307abf289af18ce1af2dc75184a
+      SECRET_KEY: "1100011100011"
+      ALGORITHM: HS256
+      ADMIN_EMAIL: "admin@utschool.sch.id"
+      ADMIN_PASSWORD: "admin-ini"
+      MONGO_URL: mongodb://admin:2006@mymongo:27017/
+      MAIN_DB: nfc_db
     networks:
       - nfc-network
 
